@@ -7,6 +7,9 @@
       [lein-exec                          "0.3.7"]
      ;[jonase/eastwood                    "0.3.5"]
     ]
-    :jvm-opts ["-Xms1g" "-Xmx4g"] 
+    :jvm-opts ["-Xms1g" "-Xmx4g"
+               "-XX:+UnlockExperimentalVMOptions" "-XX:+UseZGC"
+             ; "-XX:+UnlockExperimentalVMOptions" "-XX:+UseShenandoahGC" 
+              ]
   }
 }
